# minhash-node-rs

./: .gitignore  README.md  package.json
lib/: index.js
native/: Cargo.toml
native/src/: lib.rs
native/src/minhash/: minhash.rs  mod.rs
