[package]
name = "minhash-node-rs"
version = "0.1.0"
authors = ["David Xu <dx@whereto.com>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "minhash_node_rs"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.10.0"

[dependencies]
neon = "0.10.1"
twox-hash = "1.1.2"
